# artifacts-rs

./: .gitignore  Cargo.toml  README.md
emulator/: .gitignore  Cargo.toml  hack.js  justfile
emulator/src/: main.rs  server.rs  server_auth.rs  state.rs
openapi/: .gitignore  .openapi-generator-ignore  Cargo.toml  README.md  generate.sh
openapi/.openapi-generator/: FILES
openapi/api/: openapi.yaml
openapi/docs/: ActionItemBankResponseSchema.md  ActiveEventSchema.md  AddAccountSchema.md  AddCharacterSchema.md  AnnouncementSchema.md  BankItemSchema.md  BlockedHitsSchema.md  ChangePassword.md  CharacterFightDataSchema.md  CharacterFightResponseSchema.md  CharacterMovementDataSchema.md  CharacterMovementResponseSchema.md  CharacterResponseSchema.md  CharacterSchema.md  CooldownSchema.md  CraftSchema.md  CraftingSchema.md  DataPageActiveEventSchema.md  DataPageCharacterSchema.md  DataPageGeItemSchema.md  DataPageItemSchema.md  DataPageLogSchema.md  DataPageMapSchema.md  DataPageMonsterSchema.md  DataPageResourceSchema.md  DataPageSimpleItemSchema.md  DeleteCharacterSchema.md  DeleteItemResponseSchema.md  DeleteItemSchema.md  DepositWithdrawGoldSchema.md  DestinationSchema.md  DropRateSchema.md  DropSchema.md  EquipRequestSchema.md  EquipSchema.md  EquipmentResponseSchema.md  FightSchema.md  GeItemResponseSchema.md  GeItemSchema.md  GeTransactionItemSchema.md  (+54 more)
openapi/src/: auth.rs  context.rs  lib.rs  models.rs
openapi/src/client/: mod.rs
openapi/src/server/: mod.rs
