[package]
name = "artifacts-emulator"
version = "0.1.0"
edition = "2021"

[dependencies]
artifacts-openapi = { path = "../openapi" }
clap = "2.25"
env_logger = "0.7"
tokio = { version = "1.14", features = ["full"] }
async-trait = "0.1.24"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
swagger = { version = "6.1", features = ["serdejson", "server", "client", "tcp"] }
log = "0.4.0"
mime = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
validator = { version = "0.16", features = ["derive"] }
hyper = {version = "0.14", features = ["full"]}
serde_ignored = {version = "0.1.1"}
url = {version = "2.1"}
jsonwebtoken = { version = "9.3.0", optional = false }
predicates = "3.1.2"
